Fixed font size for special cards because shuffle card might be too long on some OSes

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -17,7 +17,7 @@
   }
 
   .special-card {
-    font-size: 30px;
+    font-size: 28px;
     text-align: center;
     margin-top: 26px;
     text-transform: uppercase;
